<resources>
    <string name="app_name">decisionWheel</string>
    <string name="welcome_to_decision_wheel_sign_in">Welcome to decision wheel sign in.</string>
    <string name="enter_username">enter username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="decision_wheelStartPageText">Decision Wheel</string>
    <string name="create_user_account">Create user account</string>
    <string name="roulette_decision_wheel">Roulette Decision Wheel</string>
    <string name="spin">Spin!</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account1">Create Account</string>
    <string name="enter_usernameText">Enter username</string>
    <string name="add_wheel">Add Wheel</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="create_username">Create username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="confirm_useranme">Confirm useranme</string>
    <string name="retype_username">Retype username</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_password">Retype password</string>
    <string name="create_a_password">Create a password</string>
    <string name="create">Create!</string>

    <string-array name="wheel_colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Magenta</item>
        <item>Cyan</item>
    </string-array>
</resources>
