<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creation_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationActivity">

    <TextView
        android:id="@+id/title_of_create"
        android:layout_width="312dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/create_new_profile"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_label"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_of_create" />
    <EditText
        android:id="@+id/username_entry"
        android:layout_width="312dp"
        android:autofillHints="username"
        android:hint="@string/enter_a_username"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_label_confirm"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_useranme"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_entry" />

    <EditText
        android:id="@+id/username_entry_confirm"
        android:layout_width="312dp"
        android:autofillHints="username"
        android:hint="@string/retype_username"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label_confirm" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_label"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_entry_confirm" />
    <EditText
        android:id="@+id/password_entry"
        android:layout_width="312dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/create_a_password"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_label_confirm"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_entry" />

    <EditText
        android:id="@+id/password_entry_confirm"
        android:layout_width="312dp"
        android:autofillHints="password"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label_confirm" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="36dp"
        android:text="@string/create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_entry_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>

