<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/titleCreateAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/create_account1"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameCreateEntry"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Enter username"
        android:gravity="center"
        android:hint="@string/enter_usernameText"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccountTextView" />

    <EditText
        android:id="@+id/passwordCreateEntry"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:autofillHints="Enter password"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameCreateEntry" />



    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:text="@string/create_account"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCreateEntry" />

</androidx.constraintlayout.widget.ConstraintLayout>